--- a/specific-parts/specific-addons/sce/views/auth_signup.xml
+++ b/specific-parts/specific-addons/sce/views/auth_signup.xml
@@ -3,7 +3,10 @@
   <template id="auth_signup_inherited" inherit_id="auth_signup.fields" name="CPF Usuario">
             <xpath expr="//div[@class='form-group field-name']" position="after">
                 <label for="cpf">Seu CPF</label>
-                <input type="text" name="cpf" id="cpf" class="form-control form-control-sm" />
+                <input type="text" name="cpf" id="cpf"
+                       class="form-control form-control-sm"
+                       pattern="\d{3}\.\d{3}\.\d{3}-\d{2}"
+                        placeholder="Ex. 999.999.999-99"/>
             </xpath>
   </template>
 </odoo>
