[ADD] Init commit

--- a/specific-parts/specific-addons/lugiu/views/busca.xml
+++ b/specific-parts/specific-addons/lugiu/views/busca.xml
@@ -31,7 +31,7 @@
     </record>
 
     <record model="ir.actions.act_window" id="busca_action">
-       <field name="name">busca Action</field>
+       <field name="name">Busca</field>
        <field name="res_model">busca</field>
        <field name="view_mode">tree,form</field>
        <field name="view_id" ref="busca_view_tree"/>
