--- a/specific-parts/specific-addons/lugiu/views/produto.xml
+++ b/specific-parts/specific-addons/lugiu/views/produto.xml
@@ -31,7 +31,7 @@
     </record>
 
     <record model="ir.actions.act_window" id="produto_action">
-       <field name="name">produto Action</field>
+       <field name="name">Produto</field>
        <field name="res_model">produto</field>
        <field name="view_mode">tree,form</field>
        <field name="view_id" ref="produto_view_tree"/>
