--- a/specific-parts/specific-addons/lugiu/views/busca.xml
+++ b/specific-parts/specific-addons/lugiu/views/busca.xml
@@ -20,10 +20,10 @@
         <field name="arch" type="xml">
             <form>
                 <sheet>
-                    <group string="busca">
+                    <group col="4" colspan="4" string="busca">
                         <field name="produto_id" />
                         <field name="preco" />
-                        <field name="url" />
+                        <field name="url" col="4" colspan="4" />
                     </group>
                 </sheet>
             </form>
