--- a/specific-parts/specific-addons/lugiu/views/comodo.xml
+++ b/specific-parts/specific-addons/lugiu/views/comodo.xml
@@ -20,7 +20,13 @@
                 <sheet>
                     <group string="Comodo">
                         <field name="name" required="1" />
-                        <field name="item_ids" required="1" />
+                        <field name="item_ids" widget="one2many_tags">
+                            <tree editable="botton">
+                                <field name="name" />
+                                <field name="quantidade" />
+                                <field name="importancia" />
+                            </tree>
+                        </field>
                     </group>
                 </sheet>
             </form>
