--- a/specific-parts/specific-addons/lugiu/views/item.xml
+++ b/specific-parts/specific-addons/lugiu/views/item.xml
@@ -26,7 +26,13 @@
                         <field name="name" required="1" />
                         <field name="quantidade" />
                         <field name="importancia" />
-                        <field name="produto_ids" />
+                        <field name="produto_ids">
+                            <tree editable="botton">
+                                <field name="name" />
+                                <field name="marca_id" />
+                                <field name="importancia" />
+                            </tree>
+                        </field>
                     </group>
                 </sheet>
             </form>
