--- a/specific-parts/specific-addons/lugiu/views/produto.xml
+++ b/specific-parts/specific-addons/lugiu/views/produto.xml
@@ -7,6 +7,9 @@
         <field name="arch" type="xml">
             <tree>
                 <field name="name" />
+                <field name="item_id" />
+                <field name="marca_id" />
+                <field name="importancia" />
             </tree>
         </field>
     </record>
@@ -18,11 +21,13 @@
         <field name="arch" type="xml">
             <form>
                 <sheet>
-                    <group string="produto">
+                    <group col="4" colspan="4" string="Produto">
                         <field name="item_id" required="1" />
                         <field name="name" required="1" />
                         <field name="marca_id" required="1" />
                         <field name="importancia" required="1" />
+                    </group>
+                    <group>
                         <field name="busca_ids" />
                     </group>
                 </sheet>
