[ADD] Init commit

--- a/specific-parts/specific-addons/lugiu/views/comodo.xml
+++ b/specific-parts/specific-addons/lugiu/views/comodo.xml
@@ -20,14 +20,15 @@
                 <sheet>
                     <group string="Comodo">
                         <field name="name" required="1" />
-                        <field name="item_ids" widget="one2many_tags">
-                            <tree editable="botton">
-                                <field name="name" />
-                                <field name="quantidade" />
-                                <field name="importancia" />
-                            </tree>
-                        </field>
                     </group>
+                    <separator string="Itens" />
+                    <field name="item_ids" widget="one2many_tags">
+                        <tree editable="botton">
+                            <field name="name" />
+                            <field name="quantidade" />
+                            <field name="importancia" />
+                        </tree>
+                    </field>
                 </sheet>
             </form>
         </field>
