--- a/specific-parts/specific-addons/lugiu/views/item.xml
+++ b/specific-parts/specific-addons/lugiu/views/item.xml
@@ -21,19 +21,20 @@
         <field name="arch" type="xml">
             <form>
                 <sheet>
-                    <group string="Item">
+                    <group string="Item" col="4" colspan="4">
                         <field name="comodo_id" required="1" />
                         <field name="name" required="1" />
                         <field name="quantidade" />
                         <field name="importancia" />
-                        <field name="produto_ids">
-                            <tree editable="botton">
-                                <field name="name" />
-                                <field name="marca_id" />
-                                <field name="importancia" />
-                            </tree>
-                        </field>
                     </group>
+                    <separator string="Produtos" />
+                    <field name="produto_ids">
+                        <tree editable="botton">
+                            <field name="name" />
+                            <field name="marca_id" />
+                            <field name="importancia" />
+                        </tree>
+                    </field>
                 </sheet>
             </form>
         </field>
