--- a/specific-parts/specific-addons/lugiu/views/comodo.xml
+++ b/specific-parts/specific-addons/lugiu/views/comodo.xml
@@ -27,6 +27,8 @@
                             <field name="name" />
                             <field name="quantidade" />
                             <field name="importancia" />
+                            <field name="valor_estimado" />
+                            <field name="total_estimado" />
                         </tree>
                     </field>
                 </sheet>
