[ADD] Init commit

--- a/specific-parts/specific-addons/lugiu/views/item.xml
+++ b/specific-parts/specific-addons/lugiu/views/item.xml
@@ -28,6 +28,7 @@
                         <field name="importancia" />
                         <field name="valor_estimado" />
                         <field name="total_estimado" />
+                        <field name="total_estimado" />
                     </group>
                     <separator string="Produtos" />
                     <field name="produto_ids">
