[ADD] Init commit

--- a/specific-parts/specific-addons/lugiu/views/item.xml
+++ b/specific-parts/specific-addons/lugiu/views/item.xml
@@ -27,8 +27,8 @@
                         <field name="quantidade" />
                         <field name="importancia" />
                         <field name="valor_estimado" />
-                        <field name="total_estimado" />
-                        <field name="total_estimado" />
+                        <field name="total_estimado" sum="Total Estimado Geral" />
+                        <field name="valor_pg" sum="Total PG" />
                     </group>
                     <separator string="Produtos" />
                     <field name="produto_ids">
