--- a/specific-parts/specific-addons/lugiu/views/comodo.xml
+++ b/specific-parts/specific-addons/lugiu/views/comodo.xml
@@ -28,7 +28,8 @@
                             <field name="quantidade" />
                             <field name="importancia" />
                             <field name="valor_estimado" />
-                            <field name="total_estimado" />
+                            <field name="total_estimado" sum="Total Estimado Geral"  />
+                            <field name="valor_pg" sum="Total PG" />
                         </tree>
                     </field>
                 </sheet>
