--- a/specific-parts/specific-addons/lugiu/views/item.xml
+++ b/specific-parts/specific-addons/lugiu/views/item.xml
@@ -23,6 +23,9 @@
         <field name="priority">16</field>
         <field name="arch" type="xml">
             <form>
+                <header>
+                    <field name="state" widget="statusbar" />
+                </header>
                 <sheet>
                     <group string="Item" col="4" colspan="4">
                         <field name="comodo_id" required="1" />
