[ADD] Init commit

--- a/specific-parts/specific-addons/lugiu/views/produto.xml
+++ b/specific-parts/specific-addons/lugiu/views/produto.xml
@@ -25,13 +25,9 @@
                 <sheet>
                     <div class="oe_button_box" name="button_box">
                         <button class="oe_stat_button" icon="fa-gavel" style="width: 173px !important">
-                            <field name="active" widget="boolean_button" />
+                            <field name="comprado" widget="boolean_button" />
                         </button>
                     </div>
-
-                    <group>
-                        <field name="comprado" />
-                    </group>
                     <group col="4" colspan="4" string="Produto">
                         <field name="item_id" required="1" />
                         <field name="marca_id" required="1" />
