--- a/specific-parts/specific-addons/lugiu/views/produto.xml
+++ b/specific-parts/specific-addons/lugiu/views/produto.xml
@@ -25,7 +25,9 @@
                 <sheet>
                     <div class="oe_button_box" name="button_box">
                         <button class="oe_stat_button" icon="fa-gavel" style="width: 173px !important">
-                            <field name="comprado" widget="boolean_button" />
+                            <field name="comprado" widget="boolean_button"
+                            options='{"terminology": {"string_true": "Comprado, Porra!",
+                            "string_false": "Ainda não", }}' />
                         </button>
                     </div>
                     <group col="4" colspan="4" string="Produto">
