--- a/specific-parts/specific-addons/lugiu/views/produto.xml
+++ b/specific-parts/specific-addons/lugiu/views/produto.xml
@@ -27,7 +27,9 @@
                         <button name="btn_comprado" type="object" class="oe_stat_button" icon="fa-gavel" style="width: 173px !important">
                             <field name="comprado" widget="boolean_button"
                             options='{"terminology": {"string_true": "Comprado, Porra!",
-                            "string_false": "Calma jovem...", }}' />
+                                                      "hover_true": "Descomprar =(",
+                                                      "string_false": "Calma jovem...",
+                                                      "hover_false": "Comprou, viado?!"}}' />
                         </button>
                     </div>
                     <group col="4" colspan="4" string="Produto">
