[ADD] Init commit

--- a/specific-parts/specific-addons/lugiu/views/comodo.xml
+++ b/specific-parts/specific-addons/lugiu/views/comodo.xml
@@ -21,6 +21,17 @@
                     <group string="Comodo">
                         <field name="name" required="1" />
                     </group>
+                    <separator string="Status" />
+                    <group col="4" colspan="4">
+                        <field name="indispensavel_total" />
+                        <field name="indispensavel_porcent" nolabel="1" widget="progressbar" />
+                        <field name="bomter_total" />
+                        <field name="bomter_porcent" nolabel="1" widget="progressbar" />
+                        <field name="perfumaria_total" />
+                        <field name="perfumaria_porcent" nolabel="1" widget="progressbar" />
+                        <field name="umdia_total" />
+                        <field name="umdia_porcent" nolabel="1" widget="progressbar" />
+                    </group>
                     <separator string="Itens" />
                     <field name="item_ids" widget="one2many_tags">
                         <tree editable="botton">
