--- a/specific-parts/specific-addons/lugiu/views/comodo.xml
+++ b/specific-parts/specific-addons/lugiu/views/comodo.xml
@@ -11,6 +11,33 @@
         </field>
     </record>
 
+    <record id="comodo_view_kanban" model="ir.ui.view">
+            <field name="name">comodo.view.kanban</field>
+            <field name="model">comodo</field>
+            <field name="arch" type="xml">
+                <kanban>
+                    <field name="name"/>
+                    <field name="indispensavel_total"/>
+                    <templates>
+                        <t t-name="kanban-box">
+                            <div t-attf-class="oe_kanban_global_click">
+                                <div class="oe_kanban_details">
+                                    <h1 style="text-align:center;">
+                                        <field name="name"/>
+                                    </h1>
+                                    <hr />
+                                    <field name="indispensavel_pg" nolabel="1" widget="gauge"
+                                           style="width:120px;height:90px;cursor:pointer;"
+                                           options="{'max_field': 'indispensavel_total'}" />
+                                </div>
+                            </div>
+                        </t>
+                    </templates>
+                </kanban>
+            </field>
+        </record>
+
+
     <record id="comodo_view_form" model="ir.ui.view">
         <field name="name">comodo.view.form</field>
         <field name="model">comodo</field>
@@ -58,9 +85,10 @@
     <record model="ir.actions.act_window" id="comodo_action">
        <field name="name">Comodo</field>
        <field name="res_model">comodo</field>
-       <field name="view_mode">tree,form</field>
+       <field name="view_mode">kanban,tree,form</field>
        <field name="view_id" ref="comodo_view_tree"/>
        <field name="view_ids" eval="[(5, 0, 0),
+        (0, 0, {'view_mode': 'kanban', 'view_id': ref('comodo_view_kanban')}),
         (0, 0, {'view_mode': 'tree', 'view_id': ref('comodo_view_tree')}),
         (0, 0, {'view_mode': 'form', 'view_id': ref('comodo_view_form')})]"/>
    </record>
