--- a/specific-parts/specific-addons/lugiu/views/comodo.xml
+++ b/specific-parts/specific-addons/lugiu/views/comodo.xml
@@ -49,22 +49,20 @@
                         <field name="name" nolabel="1" required="1" />
                     </h1>
                     <separator string="Status" />
+                    <field name="indispensavel_total" nolabel="1" invisible="1" />
+                    <field name="bomter_total" nolabel="1" invisible="1" />
+                    <field name="perfumaria_total" nolabel="1" invisible="1" />
+                    <field name="umdia_total" nolabel="1" invisible="1" />
                     <group col="8" colspan="8">
-                        <field name="indispensavel_pg" nolabel="1" widget="gauge" style="height: 100px;"
+                        <field name="indispensavel_pg" nolabel="1" widget="gauge" style="text-align:center;width:100%;height:200px;cursor:pointer;"
                         options="{'max_field': 'indispensavel_total'}" />
-                        <field name="indispensavel_total" nolabel="1" />
-
-                        <field name="bomter_pg" nolabel="1" widget="gauge" style="height: 100px;" 
+                        <field name="bomter_pg" nolabel="1" widget="gauge" style="text-align:center;width:100%;height:200px;cursor:pointer;"
                         options="{'max_field': 'bomter_total'}" />
-                        <field name="bomter_total" nolabel="1" />
-
-                        <field name="perfumaria_pg" nolabel="1" widget="gauge" style="height: 100px;"
+                        <field name="perfumaria_pg" nolabel="1" widget="gauge" style="text-align:center;width:100%;height:200px;cursor:pointer;"
                         options="{'max_field': 'perfumaria_total'}" />
-                        <field name="perfumaria_total" nolabel="1" />
-
-                        <field name="umdia_pg" nolabel="1" widget="gauge" style="height: 100px;" 
+                        <field name="umdia_pg" nolabel="1" widget="gauge" style="text-align:center;width:100%;height:200px;cursor:pointer;"
                         options="{'max_field': 'umdia_total'}" />
-                        <field name="umdia_total" nolabel="1" />
+
                     </group>
                     <separator string="Itens" />
                     <field name="item_ids" widget="one2many_tags">
