--- a/specific-parts/specific-addons/lugiu/views/comodo.xml
+++ b/specific-parts/specific-addons/lugiu/views/comodo.xml
@@ -73,6 +73,7 @@
                             <field name="valor_estimado" />
                             <field name="total_estimado" sum="Total Estimado Geral"  />
                             <field name="valor_pg" sum="Total PG" />
+                            <field name="necessario_buscar" />
                         </tree>
                     </field>
                 </sheet>
