--- a/specific-parts/specific-addons/lugiu/views/item.xml
+++ b/specific-parts/specific-addons/lugiu/views/item.xml
@@ -11,6 +11,7 @@
                 <field name="valor_estimado" />
                 <field name="total_estimado" sum="Total Estimado Geral" />
                 <field name="valor_pg" sum="Total PG" />
+                <field name="state" sum="Total PG" />
             </tree>
         </field>
     </record>
@@ -47,13 +48,14 @@
                             </group>
                             <separator string="Buscas" />
                             <button name="buscar" string="Buscar" type="object" states="pesquisando" />
-                            <field name="busca_ids">
-                                <tree editable="botton">
+                            <field name="busca_ids" readonly="True">
+                                <tree>
                                     <field name="name" />
                                     <field name="preco" />
                                     <field name="descricao" />
                                     <field name="url" readonly="True" />
                                     <field name="create_date" string="Data" />
+                                    <field name="confianca" />
                                 </tree>
                             </field>
                         </page>
